--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,5 +1,5 @@
 {
-    "name": "GHC 8.6.5 with HIE",
+    "name": "Haskell",
     "dockerFile": "Dockerfile",
     "runArgs": [],
 
@@ -17,10 +17,10 @@
     // "postCreateCommand": "gcc -v",
     
     // Comment out the next line if you want to run as root instead
-    "remoteUser": "vscode",
+    // "remoteUser": "root",
     
     // Add the IDs of extensions you want installed when the container is created in the array below.
     "extensions": [
-        "alanz.vscode-hie-server"
+        
     ]
 }
