--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -17,10 +17,11 @@
     // "postCreateCommand": "gcc -v",
     
     // Comment out the next line if you want to run as root instead
-    // "remoteUser": "root",
+    "remoteUser": "vscode",
     
     // Add the IDs of extensions you want installed when the container is created in the array below.
     "extensions": [
-        
+        "justusadam.language-haskell",
+        "formulahendry.code-runner"
     ]
 }
